# cursor-bridge

./: .gitignore  0001-.patch  CHANGELOG.md  CURSOR_SETUP.md  CURSOR_USAGE_GUIDE.md  DESIGN.md  Dockerfile  LICENSE  MCP_SETUP_SUMMARY.md  Makefile  PROGRESS.md  PROJECT_MANAGEMENT_GUIDE.md  QUICK_START_CHECKLIST.md  README.md  SHORTCUTS_QUICK_REFERENCE.md  USER_SHORTCUTS_GUIDE.md  cursor_bridge_config.local.yaml  cursor_bridge_config.yaml  cursor_mcp_config.json  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start_cursor_bridge.sh  test_basic.py  test_execution_basic.py  verify_setup.sh
config/: cursor_bridge_config.yaml  example.yaml
src/cursor_bridge/: __init__.py  cli.py  mcp_server.py  server.py
src/cursor_bridge/config/: __init__.py  loader.py  models.py
src/cursor_bridge/connection/: __init__.py  manager.py
src/cursor_bridge/connection/strategies/: __init__.py
src/cursor_bridge/execution/: __init__.py  models.py
src/cursor_bridge/executor/: __init__.py  command.py
src/cursor_bridge/session/: __init__.py  manager.py  models.py  tmux_backend.py
src/cursor_bridge/utils/: __init__.py  logger.py
tests/: test_basic.py  test_config.py  test_execution_engine.py  test_server.py  test_session_manager.py
